# tutorials_and_tests

./: .gitignore  README.md
ankiapp/: README.md  pyproject.toml
ankiapp/src/: app.py  app_layout.py  main.py  sidebar.py
chromastart/: .gitignore  pyproject.toml
chromastart/src/chromastart/: __init__.py  utils.py
custom_mlflow_flavor/: main.py
custom_mlflow_flavor/src/: base.py
custom_mlflow_flavor/src/flavor/: loaders.py  save.py  wrapper.py
docker-tests/multiple-apps-compose/: docker-compose.yaml
docker-tests/multiple-apps-compose/app1/: Dockerfile  pyproject.toml
docker-tests/multiple-apps-compose/app2/: Dockerfile  README.md  pyproject.toml
docker-tests/simple-app/: compose.yaml
docker-tests/simple-app/backend/: Dockerfile  pyproject.toml
docker-tests/simple-app/frontend/: Dockerfile
flet_tutorial/: pyproject.toml
flet_tutorial/entrypoints/: first_app.py  galeria.py  login_screen.py  navigation.py  reusable.py  sticky_notes.py  tabs.py
flet_tutorial/first_python_app/: main.py
flet_tutorial/login_screen/: main.py
flet_tutorial/navigation/: main.py
flet_tutorial/responsive_row/: main.py
flet_tutorial/reusable_components/: main.py
flet_tutorial/sticky_notes/: main.py
flet_tutorial/tabs/: main.py
helloapi/api/: Dockerfile  pyproject.toml
helloapi/api/api/: __init__.py
helloapi/infra/: main.tf  variables.tf
intro_fastmcp/quickstart/: README.md  pyproject.toml
intro_fastmcp/quickstart/src/quickstart/: __init__.py
intro_fastmcp/quickstart/src/quickstart/client/: client.py
intro_fastmcp/simplecalc/: pyproject.toml  test.py
intro_fastmcp/simplecalc/src/simplecalc/: __init__.py
k8s_tests/custom_image/: Dockerfile  README.md
k8s_tests/custom_image/fastapiapp/: Dockerfile  pyproject.toml
k8s_tests/custom_image/util_package/: pyproject.toml
k8s_tests/mlflowdeployment/: deployment.yaml
k8s_tests/mlflowpod/: README.md  pod.yaml
k8s_tests/mongodeploy/: mongo.yaml  secret.yaml
k8s_tests/multicontainer/: Dockerfile  pod.yaml  pyproject.toml
k8s_tests/multicontainer/multicontainer/: __init__.py
k8s_tests/podservices/: README.md  pod.yaml  service.yaml
k8s_tests/podservices/app1/: Dockerfile  pod.yaml  pyproject.toml
k8s_tests/podservices/app1/app1/: __init__.py
k8s_tests/simpleapp/: Dockerfile  README.md  pod.yaml  pyproject.toml  simpleapp_config.yaml
k8s_tests/simpleapp/simpleapp/: __init__.py
k8s_tests/simplejob/: Dockerfile  deployment.yaml  requirements.txt  simple_job.yaml  train.py  training_job.yaml
retrieval-evaluator/: pyproject.toml
simple_api_crud/: app.py  settings.py
simple_api_crud/blueprints/: user.py
simple_api_crud/models/: user.py
simple_crud_fast_api/: app.py
simple_crud_fast_api/models/: users.py
simple_crud_fast_api/routes/: user.py
simple_rag/backend/: app.py
simple_rag/backend/config/: settings.py
simple_rag/backend/models/: user.py
simple_rag/backend/routes/: agent.py  db_operations.py  users.py
simple_rag/backend/services/: embeddings.py  mongo_manager.py
vector-search-rag-tutorial/: movie_recs.py  utils.py
(+6 files in other folders)
