[project]
name = "quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manuel Gil", email = "manuelgilsitio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
]

[project.scripts]
quickstart = "quickstart:main"
client = "quickstart.client.client:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
