[tool.poetry]
name = "multicontainer"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.11"}
mlflow = "^2.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
