[tool.poetry]
name = "app1"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.11"}
requests = "^2.32.3"
mlflow = "^2.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
